fix: fix getfirst